--- a/Blog Posts.html
+++ b/Blog Posts.html
@@ -35,9 +35,9 @@
             <li class="nav-item">
               <a class="nav-link" href="Blog Posts.html">Blog Posts</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="Contact.html">Contact</a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
@@ -46,36 +46,32 @@
   </header>
   <main>
     <div class="side-bar-left">
-      <img class="images_profil" src="mesange-bleue-1-055106.jpeg" alt="Image Profil">
+      <img class="images_profil" src="IMG_1940.jpg" alt="Image Profil">
       <nav class="side_bar_links">
-        <i class="fa-solid fa-location-dot"> </i> Canada<br>
-        <i class="fa-brands fa-linkedin"> </i> <a href="https://www.linkedin.com"> Linkedin</a> <br>
-        <i class="fa-solid fa-envelope"> </i><a href="email"> Email</a><br>
-        <i class="fa-brands fa-github"> </i> <a href="">Github</a> <br>
+          <i class="fa-solid fa-location-dot"> </i> Montréal, CA<br>
+          <i class="fa-brands fa-linkedin"> </i> <a href="https://www.linkedin.com/in/sofiane-azogagh-5332651b8/"> Linkedin</a> <br>
+          <i class="fa-solid fa-envelope"> </i><a href="mailto:azogagh.sofiane@courrier.uqam.ca"> Email</a><br>
+          <i class="fa-brands fa-github"> </i> <a href="https://github.com/sofianeazogagh">Github</a> <br>
       </nav>
-    </div>
+  </div>
     <div class="main-content">
       <h1>Blog Posts</h1>
       <hr>
       <div class="posts">
-        <h3>Post 3</h3>
+        <h3>Post</h3>
+        <p>Under construction</p>
+        <!-- <h3>Post 2</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint praesentium corrupti nostrum placeat libero
           cumque saepe veritatis fugit? Unde, incidunt maiores veritatis voluptate eum hic sit natus obcaecati eveniet,
           enim fugit rem? Tempora corporis ratione modi perspiciatis impedit necessitatibus autem facilis deleniti vel
           commodi adipisci incidunt veniam maxime fugiat quia voluptatem amet, quos earum sapiente distinctio sed
-          itaque? Vero, odio?</p>
-        <h3>Post 2</h3>
+          itaque? Vero, odio?</p> -->
+        <!-- <h3>Post 1</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint praesentium corrupti nostrum placeat libero
           cumque saepe veritatis fugit? Unde, incidunt maiores veritatis voluptate eum hic sit natus obcaecati eveniet,
           enim fugit rem? Tempora corporis ratione modi perspiciatis impedit necessitatibus autem facilis deleniti vel
           commodi adipisci incidunt veniam maxime fugiat quia voluptatem amet, quos earum sapiente distinctio sed
-          itaque? Vero, odio?</p>
-        <h3>Post 1</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint praesentium corrupti nostrum placeat libero
-          cumque saepe veritatis fugit? Unde, incidunt maiores veritatis voluptate eum hic sit natus obcaecati eveniet,
-          enim fugit rem? Tempora corporis ratione modi perspiciatis impedit necessitatibus autem facilis deleniti vel
-          commodi adipisci incidunt veniam maxime fugiat quia voluptatem amet, quos earum sapiente distinctio sed
-          itaque? Vero, odio?</p>
+          itaque? Vero, odio?</p> -->
       </div>
       <!-- Paginations -->
       <!-- <div class="pagination_section">
@@ -87,12 +83,23 @@
 
 
 
-  <footer class="bg-light text-center text-lg-start">
-    <!-- Copyright -->
+  <!-- <footer class="bg-light text-center text-lg-start">
+    Copyright
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
       2022 - Azogagh Sofiane
     </div>
+  </footer> -->
+
+  <footer class="bg-light text-center text-lg-start">
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      <span id="currentYear"></span> - Azogagh Sofiane
+    </div>
   </footer>
+  
+  <script>
+    document.getElementById('currentYear').textContent = new Date().getFullYear();
+  </script>
 
   <!-- Scripts -->
   <script src="https://kit.fontawesome.com/785dd546fc.js" crossorigin="anonymous"></script>
