--- a/Contact.html
+++ b/Contact.html
@@ -46,12 +46,12 @@
   </header>
   <main>
     <div class="side-bar-left">
-      <img class="images_profil" src="mesange-bleue-1-055106.jpeg" alt="Image Profil">
+      <img class="images_profil" src="IMG_1940.jpg" alt="Image Profil">
       <nav class="side_bar_links">
-        <i class="fa-solid fa-location-dot"> </i> Canada<br>
-        <i class="fa-brands fa-linkedin"> </i> <a href="https://www.linkedin.com"> Linkedin</a> <br>
-        <i class="fa-solid fa-envelope"> </i><a href="email"> Email</a><br>
-        <i class="fa-brands fa-github"> </i> <a href="">Github</a> <br>
+          <i class="fa-solid fa-location-dot"> </i> Montréal, CA<br>
+          <i class="fa-brands fa-linkedin"> </i> <a href="https://www.linkedin.com/in/sofiane-azogagh-5332651b8/"> Linkedin</a> <br>
+          <i class="fa-solid fa-envelope"> </i><a href="mailto:azogagh.sofiane@courrier.uqam.ca"> Email</a><br>
+          <i class="fa-brands fa-github"> </i> <a href="https://github.com/sofianeazogagh">Github</a> <br>
       </nav>
     </div>
     <div class="main-content">
@@ -75,9 +75,13 @@
   <footer class="bg-light text-center text-lg-start">
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-      2022 - Azogagh Sofiane
+      <span id="currentYear"></span> - Azogagh Sofiane
     </div>
   </footer>
+  
+  <script>
+    document.getElementById('currentYear').textContent = new Date().getFullYear();
+  </script>
 
   <!-- Scripts -->
   <script src="https://kit.fontawesome.com/785dd546fc.js" crossorigin="anonymous"></script>
