--- a/Publications.html
+++ b/Publications.html
@@ -35,9 +35,9 @@
             <li class="nav-item">
               <a class="nav-link" href="Blog Posts.html">Blog Posts</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="Contact.html">Contact</a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
@@ -46,40 +46,20 @@
   </header>
   <main>
     <div class="side-bar-left">
-      <img class="images_profil" src="mesange-bleue-1-055106.jpeg" alt="Image Profil">
+      <img class="images_profil" src="IMG_1940.jpg" alt="Image Profil">
       <nav class="side_bar_links">
-        <i class="fa-solid fa-location-dot"> </i> Canada<br>
-        <i class="fa-brands fa-linkedin"> </i> <a href="https://www.linkedin.com"> Linkedin</a> <br>
-        <i class="fa-solid fa-envelope"> </i><a href="email"> Email</a><br>
-        <i class="fa-brands fa-github"> </i> <a href="">Github</a> <br>
+          <i class="fa-solid fa-location-dot"> </i> Montréal, CA<br>
+          <i class="fa-brands fa-linkedin"> </i> <a href="https://www.linkedin.com/in/sofiane-azogagh-5332651b8/"> Linkedin</a> <br>
+          <i class="fa-solid fa-envelope"> </i><a href="mailto:azogagh.sofiane@courrier.uqam.ca"> Email</a><br>
+          <i class="fa-brands fa-github"> </i> <a href="https://github.com/sofianeazogagh">Github</a> <br>
       </nav>
     </div>
     <div class="main-content">
       <h1>Publications</h1>
       <hr>
-      <h3>Publication 4</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis non consectetur id blanditiis sit facilis. Eos
-        ullam nobis cumque quae perferendis quod, animi error id deserunt sequi dolore ratione explicabo!</p>
+      <h3><a href="https://dl.acm.org/doi/10.1145/3560827.3563377">PROBONITE : Private One-Branch-Only Non-Interactive decision Tree Evaluation</a></h3>
+      <p>Published in WAHC 2022 : The 10th Workshop on Encrypted Computing & Applied Homomorphic Cryptography with V.Delfour, S. Gambs and M-O. Killijian</p>
 
-      <h3>Publication 3</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis non consectetur id blanditiis sit facilis. Eos
-        ullam nobis cumque quae perferendis quod, animi error id deserunt sequi dolore ratione explicabo!</p>
-
-      <h3>Publication 2</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis non consectetur id blanditiis sit facilis. Eos
-        ullam nobis cumque quae perferendis quod, animi error id deserunt sequi dolore ratione explicabo!</p>
-
-      <h3>Publication 1</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis non consectetur id blanditiis sit facilis. Eos
-        ullam nobis cumque quae perferendis quod, animi error id deserunt sequi dolore ratione explicabo!</p>
-
-
-
-      <!-- Paginations -->
-      <!-- <div class="pagination_section">
-        <a href="/Publications/Publications.html" title="Title1">1</a>
-        <a href="/Publications/Publications2.html" title="Title2">2</a>
-      </div> -->
     </div>
 
   </main>
@@ -89,9 +69,13 @@
   <footer class="bg-light text-center text-lg-start">
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-      2022 - Azogagh Sofiane
+      <span id="currentYear"></span> - Azogagh Sofiane
     </div>
   </footer>
+  
+  <script>
+    document.getElementById('currentYear').textContent = new Date().getFullYear();
+  </script>
 
   <!-- Scripts -->
   <script src="https://kit.fontawesome.com/785dd546fc.js" crossorigin="anonymous"></script>
