--- a/Teaching.html
+++ b/Teaching.html
@@ -35,9 +35,9 @@
             <li class="nav-item">
               <a class="nav-link" href="Blog Posts.html">Blog Posts</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="Contact.html">Contact</a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
@@ -46,34 +46,41 @@
   </header>
   <main>
     <div class="side-bar-left">
-      <img class="images_profil" src="mesange-bleue-1-055106.jpeg" alt="Image Profil">
+      <img class="images_profil" src="IMG_1940.jpg" alt="Image Profil">
       <nav class="side_bar_links">
-        <i class="fa-solid fa-location-dot"> </i> Canada<br>
-        <i class="fa-brands fa-linkedin"> </i> <a href="https://www.linkedin.com"> Linkedin</a> <br>
-        <i class="fa-solid fa-envelope"> </i><a href="email"> Email</a><br>
-        <i class="fa-brands fa-github"> </i> <a href="">Github</a> <br>
+          <i class="fa-solid fa-location-dot"> </i> Montréal, CA<br>
+          <i class="fa-brands fa-linkedin"> </i> <a href="https://www.linkedin.com/in/sofiane-azogagh-5332651b8/"> Linkedin</a> <br>
+          <i class="fa-solid fa-envelope"> </i><a href="mailto:azogagh.sofiane@courrier.uqam.ca"> Email</a><br>
+          <i class="fa-brands fa-github"> </i> <a href="https://github.com/sofianeazogagh">Github</a> <br>
       </nav>
     </div>
     <div class="main-content">
       <h1>Teaching</h1>
       <hr>
-      <h3>Teaching 4</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex deleniti aliquam consectetur omnis magnam deserunt
-        eius debitis perferendis minus esse ea iste blanditiis enim voluptatibus minima quibusdam illum dolor, illo
-        quaerat facere quos! Nihil consectetur impedit molestiae minima inventore dignissimos.</p>
-      <h3>Teaching 3</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex deleniti aliquam consectetur omnis magnam deserunt
-        eius debitis perferendis minus esse ea iste blanditiis enim voluptatibus minima quibusdam illum dolor, illo
-        quaerat facere quos! Nihil consectetur impedit molestiae minima inventore dignissimos.</p>
-      <h3>Teaching 2</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex deleniti aliquam consectetur omnis magnam deserunt
-        eius debitis perferendis minus esse ea iste blanditiis enim voluptatibus minima quibusdam illum dolor, illo
-        quaerat facere quos! Nihil consectetur impedit molestiae minima inventore dignissimos.</p>
-      <h3>Teaching 1</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex deleniti aliquam consectetur omnis magnam deserunt
-        eius debitis perferendis minus esse ea iste blanditiis enim voluptatibus minima quibusdam illum dolor, illo
-        quaerat facere quos! Nihil consectetur impedit molestiae minima inventore dignissimos.</p>
-
+      <h3>2022-2023 : Teaching Assistant (Université du Québec à Montréal)</h3>
+      <ul>
+        <li> Undergraduate courses, Department of Computer Science</li>
+        <ul>
+          <li>Lab Sessions - Introduction to IT security <a href="https://etudier.uqam.ca/cours?sigle=INF1132">(INF4471)</a></li>
+          <li>Lab Sessions - Mathematics for computer science <a href="https://etudier.uqam.ca/cours?sigle=INF1132">(INF1132)</a></li>
+          <li>Marker - Mathematics for computer science <a href="https://etudier.uqam.ca/cours?sigle=INF1132">(INF1132)</a></li>
+        </ul>
+        <li> Undergraduate courses, Department of Mathematics</li>
+        <ul>
+          <li>Lab Sessions - Differential & Integral Calculus I <a href="https://etudier.uqam.ca/cours?sigle=MAT0341">(MAT0341)</a></li>
+        </ul>
+      </ul>
+      <h3>2021-2022 : Teaching Assistant (Université du Québec à Montréal)</h3>
+      <ul>
+        <li> Undergraduate courses, Department of Computer Science</li>
+        <ul>
+          <li>Marker - Introduction to IT security <a href="https://etudier.uqam.ca/cours?sigle=INF4471">(INF4471)</a></li>
+        </ul>
+        <li> Graduate courses, Department of Computer Science</li>
+        <ul>
+          <li>Lab Sessions - Security of IT systems <a href="https://etudier.uqam.ca/cours?sigle=INF8750">(INF8750)</a></li>
+        </ul>
+      </ul>
 
       <!-- Paginations -->
       <!-- <div class="pagination_section">
@@ -88,9 +95,13 @@
   <footer class="bg-light text-center text-lg-start">
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-      2022 - Azogagh Sofiane
+      <span id="currentYear"></span> - Azogagh Sofiane
     </div>
   </footer>
+  
+  <script>
+    document.getElementById('currentYear').textContent = new Date().getFullYear();
+  </script>
 
   <!-- Scripts -->
   <script src="https://kit.fontawesome.com/785dd546fc.js" crossorigin="anonymous"></script>
