--- a/index.html
+++ b/index.html
@@ -63,10 +63,13 @@
             <h1>Homepage</h1>
             <hr>
 
-            <p>I am currently a PhD Student at the Université du Québec à Montréal (Montréal Canada).
+            <p>I am currently a PhD Student at the Université du Québec à Montréal.
                 My research is on the intersection of Cryptography and Machine Learning. 
                 In particular, I delve into the innovative application of Homomorphic Encryption techniques
-                to enhance data privacy within the realm of machine learning.
+                to enhance data privacy within the realm of machine learning. This type of encryption enables 
+                the processing of data in an encrypted form, allowing computations to be performed on the 
+                encrypted data without the need for decryption. This revolutionary capability preserves the privacy 
+                and security of sensitive information throughout the entire computational process.
                 </p>
 
 
