--- a/Blog Posts.html
+++ b/Blog Posts.html
@@ -59,7 +59,7 @@
       <hr>
       <div class="posts">
         <h3>Post</h3>
-        <p>Under construction</p>
+        <p>Currently in construction.</p>
         <!-- <h3>Post 2</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint praesentium corrupti nostrum placeat libero
           cumque saepe veritatis fugit? Unde, incidunt maiores veritatis voluptate eum hic sit natus obcaecati eveniet,
