--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
             <h1>Homepage</h1>
             <hr>
 
-            <p>I am currently a PhD Student at the Université du Québec à Montréal.
+            <p>I am currently a PhD Student at the Université du Québec à Montréal under 
+                the supervision of <a href="https://kirija.github.io"> Marc-Olivier Killijian</a>
+                and <a href="https://sebastiengambs.openum.ca/team/"> Sébastien Gambs</a>.
                 My research is on the intersection of Cryptography and Machine Learning. 
                 In particular, I delve into the innovative application of Homomorphic Encryption techniques
                 to enhance data privacy within the realm of machine learning. This type of encryption enables 
