--- a/Publications.html
+++ b/Publications.html
@@ -58,7 +58,7 @@
       <h1>Publications</h1>
       <hr>
       <h3><a href="https://dl.acm.org/doi/10.1145/3560827.3563377">PROBONITE : Private One-Branch-Only Non-Interactive decision Tree Evaluation</a></h3>
-      <p>Published in WAHC 2022 : The 10th Workshop on Encrypted Computing & Applied Homomorphic Cryptography with V.Delfour, S. Gambs and M-O. Killijian</p>
+      <p>Published in WAHC 2022 : <a href = "https://homomorphicencryption.org/workshops/wahc22/"> The 10th Workshop on Encrypted Computing & Applied Homomorphic Cryptography</a> with V.Delfour, S. Gambs and M-O. Killijian</p>
 
     </div>
 
