--- a/Publications.html
+++ b/Publications.html
@@ -57,11 +57,14 @@
     <div class="main-content">
       <h1>Publications</h1>
       <hr>
+      <h3><a href="https://arxiv.org/pdf/2309.10890v1.pdf">Crypto’Graph: Leveraging Privacy-Preserving Distributed Link Prediction for Robust Graph Learning</a></h3>
+      <p>Eprint arxiv.</a> 
+        with Z. A. Birba, S. Gambs and M-O. Killijian</p>
       <h3><a href="https://dl.acm.org/doi/10.1145/3560827.3563377">PROBONITE : Private One-Branch-Only Non-Interactive decision Tree Evaluation</a></h3>
       <p>Published in WAHC 2022 : <a href = "https://homomorphicencryption.org/workshops/wahc22/"> The 10th Workshop on Encrypted Computing & Applied Homomorphic Cryptography</a> 
-        with V.Delfour, S. Gambs and M-O. Killijian</p>
+        with V. Delfour, S. Gambs and M-O. Killijian</p>
       <h3><a href="./elliptic-curve-m2.pdf">Research and implementation of pairing elliptic curves (in french)</a></h3>
-      <p>Master's thesis at Orange Lab, Cesson-Sévigné, France. Under the supervision of Remi Clarisse.</p>
+      <p>Master's thesis at Orange Lab, Cesson-Sévigné, France. Under the supervision of R. Clarisse.</p>
 
     </div>
 
