--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                 and security of sensitive information throughout the entire computational process.
                 </p>
 
+                
 
             <!-- Paginations -->
             <!-- <div class="pagination_section">
@@ -88,7 +89,7 @@
 
     <footer class="bg-light text-center text-lg-start">
         <!-- Copyright -->
-        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        <div class="text-center p-3">
           <span id="currentYear"></span> - Azogagh Sofiane
         </div>
       </footer>
