--- a/Publications.html
+++ b/Publications.html
@@ -57,6 +57,9 @@
     <div class="main-content">
       <h1>Publications</h1>
       <hr>
+      <h3><a href="https://eprint.iacr.org/2023/1643.pdf">Oblivious Turing Machine</a></h3>
+      <p>Eprint iacr.</a> 
+        with V. Defour, and M-O. Killijian</p>
       <h3><a href="https://arxiv.org/pdf/2309.10890v1.pdf">Crypto’Graph: Leveraging Privacy-Preserving Distributed Link Prediction for Robust Graph Learning</a></h3>
       <p>Eprint arxiv.</a> 
         with Z. A. Birba, S. Gambs and M-O. Killijian</p>
