--- a/Publications.html
+++ b/Publications.html
@@ -58,7 +58,7 @@
       <h1>Publications</h1>
       <hr>
       <h3><a href="https://eprint.iacr.org/2023/1643.pdf">Oblivious Turing Machine</a></h3>
-      <p>Eprint iacr.</a> 
+      <p>Published in EDCC 2024 : <a href="https://edcc2024.esat.kuleuven.be"> The 19th European Dependable Computing Conference</a>
         with V. Defour, and M-O. Killijian</p>
       <h3><a href="https://arxiv.org/pdf/2309.10890v1.pdf">Crypto’Graph: Leveraging Privacy-Preserving Distributed Link Prediction for Robust Graph Learning</a></h3>
       <p>Eprint arxiv.</a> 
