--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
         <!-- Sidebar -->
 
         <div class="side-bar-left">
-            <img class="images_profil" src="IMG_1940.jpg" alt="Image Profil">
+            <!-- <img class="images_profil" src="IMG_1940.jpg" alt="Image Profil"> -->
+            <img class="images_profil" src="pic_at_whac.jpg" alt="Image Profil">
             <nav class="side_bar_links">
                 <i class="fa-solid fa-location-dot"> </i> Montréal, CA<br>
                 <i class="fa-brands fa-linkedin"> </i> <a href="https://www.linkedin.com/in/sofiane-azogagh-5332651b8/"> Linkedin</a> <br>
