--- a/Publications.html
+++ b/Publications.html
@@ -46,7 +46,7 @@
   </header>
   <main>
     <div class="side-bar-left">
-      <img class="images_profil" src="IMG_1940.jpg" alt="Image Profil">
+      <img class="images_profil" src="pic_at_whac.jpg" alt="Image Profil">
       <nav class="side_bar_links">
           <i class="fa-solid fa-location-dot"> </i> Montréal, CA<br>
           <i class="fa-brands fa-linkedin"> </i> <a href="https://www.linkedin.com/in/sofiane-azogagh-5332651b8/"> Linkedin</a> <br>
