--- a/Publications.html
+++ b/Publications.html
@@ -48,23 +48,29 @@
     <div class="side-bar-left">
       <img class="images_profil" src="pic_at_whac.jpg" alt="Image Profil">
       <nav class="side_bar_links">
-          <i class="fa-solid fa-location-dot"> </i> Montréal, CA<br>
-          <i class="fa-brands fa-linkedin"> </i> <a href="https://www.linkedin.com/in/sofiane-azogagh-5332651b8/"> Linkedin</a> <br>
-          <i class="fa-solid fa-envelope"> </i><a href="mailto:azogagh.sofiane@courrier.uqam.ca"> Email</a><br>
-          <i class="fa-brands fa-github"> </i> <a href="https://github.com/sofianeazogagh">Github</a> <br>
+        <i class="fa-solid fa-location-dot"> </i> Montréal, CA<br>
+        <i class="fa-brands fa-linkedin"> </i> <a href="https://www.linkedin.com/in/sofiane-azogagh-5332651b8/">
+          Linkedin</a> <br>
+        <i class="fa-solid fa-envelope"> </i><a href="mailto:azogagh.sofiane@courrier.uqam.ca"> Email</a><br>
+        <i class="fa-brands fa-github"> </i> <a href="https://github.com/sofianeazogagh">Github</a> <br>
       </nav>
     </div>
     <div class="main-content">
       <h1>Publications</h1>
       <hr>
-      <h3><a href="https://eprint.iacr.org/2023/1643.pdf">Oblivious Turing Machine</a></h3>
-      <p>Published in EDCC 2024 : <a href="https://edcc2024.esat.kuleuven.be"> The 19th European Dependable Computing Conference</a>
-        with V. Defour, and M-O. Killijian</p>
-      <h3><a href="https://arxiv.org/pdf/2309.10890v1.pdf">Crypto’Graph: Leveraging Privacy-Preserving Distributed Link Prediction for Robust Graph Learning</a></h3>
-      <p>Eprint arxiv.</a> 
+      <h3><a href="https://arxiv.org/pdf/2309.10890v1.pdf">Crypto’Graph: Leveraging Privacy-Preserving Distributed Link
+          Prediction for Robust Graph Learning</a></h3>
+      <p>In Proceedings of the Fourteenth ACM Conference on Data and Application Security and Privacy (CODASPY '24).
+        </a>
         with Z. A. Birba, S. Gambs and M-O. Killijian</p>
-      <h3><a href="https://dl.acm.org/doi/10.1145/3560827.3563377">PROBONITE : Private One-Branch-Only Non-Interactive decision Tree Evaluation</a></h3>
-      <p>Published in WAHC 2022 : <a href = "https://homomorphicencryption.org/workshops/wahc22/"> The 10th Workshop on Encrypted Computing & Applied Homomorphic Cryptography</a> 
+      <h3><a href="https://eprint.iacr.org/2023/1643.pdf">Oblivious Turing Machine</a></h3>
+      <p>Published in EDCC 2024 : <a href="https://edcc2024.esat.kuleuven.be"> The 19th European Dependable Computing
+          Conference</a>
+        with V. Defour, and M-O. Killijian</p>
+      <h3><a href="https://dl.acm.org/doi/10.1145/3560827.3563377">PROBONITE : Private One-Branch-Only Non-Interactive
+          decision Tree Evaluation</a></h3>
+      <p>Published in WAHC 2022 : <a href="https://homomorphicencryption.org/workshops/wahc22/"> The 10th Workshop on
+          Encrypted Computing & Applied Homomorphic Cryptography</a>
         with V. Delfour, S. Gambs and M-O. Killijian</p>
       <h3><a href="./elliptic-curve-m2.pdf">Research and implementation of pairing elliptic curves (in french)</a></h3>
       <p>Master's thesis at Orange Lab, Cesson-Sévigné, France. Under the supervision of R. Clarisse.</p>
@@ -81,7 +87,7 @@
       <span id="currentYear"></span> - Azogagh Sofiane
     </div>
   </footer>
-  
+
   <script>
     document.getElementById('currentYear').textContent = new Date().getFullYear();
   </script>
