add recent works

--- a/Publications.html
+++ b/Publications.html
@@ -58,28 +58,223 @@
     <div class="main-content">
       <h1>Publications</h1>
       <hr>
-      <h3><a href="https://arxiv.org/pdf/2309.10890v1.pdf">Crypto’Graph: Leveraging Privacy-Preserving Distributed Link
-          Prediction for Robust Graph Learning</a></h3>
-      <p>In Proceedings of the Fourteenth ACM Conference on Data and Application Security and Privacy (CODASPY '24).
-        </a>
+      <!-- Blind Sort -->
+      <div class="publication-entry">
+        <div class="publication-header">
+          <h4 style="font-size: 1.1em"> A non-comparison oblivious sort
+            and its application to private k-NN</h4>
+          <div class="paper-links">
+            <a href="https://eprint.iacr.org/2024/1894.pdf" title="PDF"><i class="fa-solid fa-file-pdf"></i></a>
+            <a href="#" onclick="showBibtex('bibtexBlindSort')" title="BibTeX"><i
+                class="fa-solid fa-quote-right"></i></a>
+            <!-- <a href="https://github.com/sofianeazogagh/revoLUT" title="GitHub"><i class="fa-brands fa-github"></i></a> -->
+          </div>
+        </div>
+        <p style="font-size: 0.9em">Under review with M-O. Killijian and F. Larose-Gervais</p>
+      </div>
+
+      <!-- RevoLUT -->
+
+      <div class="publication-entry"></div>
+      <div class="publication-header">
+        <h4 style="font-size: 1.1em"> RevoLUT : Rust Efficient Versatile Oblivious Look-Up-Tables</h4>
+        <div class="paper-links">
+          <a href="https://eprint.iacr.org/2024/1935.pdf" title="PDF"><i class="fa-solid fa-file-pdf"></i></a>
+          <a href="#" onclick="showBibtex('bibtexRevoLUT')" title="BibTeX"><i class="fa-solid fa-quote-right"></i></a>
+          <a href="https://github.com/sofianeazogagh/revoLUT" title="GitHub"><i class="fa-brands fa-github"></i></a>
+        </div>
+      </div>
+      <p style="font-size: 0.9em">Under review with Z. A. Birba, M-O. Killijian and F. Larose-Gervais</p>
+    </div>
+
+
+
+    <!-- Crypto'Graph -->
+    <div class="publication-entry">
+      <div class="publication-header">
+        <h4 style="font-size: 1.1em">Crypto'Graph: Leveraging
+          Privacy-Preserving Distributed Link Prediction for Robust Graph Learning</h4>
+        <div class="paper-links">
+          <a href="https://arxiv.org/pdf/2309.10890v1.pdf" title="PDF"><i class="fa-solid fa-file-pdf"></i></a>
+          <a href="#" onclick="showBibtex('bibtexCryptoGraph')" title="BibTeX"><i
+              class="fa-solid fa-quote-right"></i></a>
+          <a href="https://github.com/birbaubin/distributed-link-prediction" title="GitHub"><i
+              class="fa-brands fa-github"></i></a>
+        </div>
+      </div>
+      <p style="font-size: 0.9em">CODASPY 2024 : <a href="https://codaspy2024.org/">The 14th ACM Conference on Data
+          and Application Security and Privacy</a>
         with Z. A. Birba, S. Gambs and M-O. Killijian</p>
-      <h3><a href="https://eprint.iacr.org/2023/1643.pdf">Oblivious Turing Machine</a></h3>
-      <p>Published in EDCC 2024 : <a href="https://edcc2024.esat.kuleuven.be"> The 19th European Dependable Computing
-          Conference</a>
-        with V. Defour, and M-O. Killijian</p>
-      <h3><a href="https://dl.acm.org/doi/10.1145/3560827.3563377">PROBONITE : Private One-Branch-Only Non-Interactive
-          decision Tree Evaluation</a></h3>
-      <p>Published in WAHC 2022 : <a href="https://homomorphicencryption.org/workshops/wahc22/"> The 10th Workshop on
+    </div>
+
+    <!-- OTM -->
+    <div class="publication-entry">
+      <div class="publication-header">
+        <h4 style="font-size: 1.1em">Oblivious Turing Machine</h4>
+        <div class="paper-links">
+          <a href="https://eprint.iacr.org/2023/1643.pdf" title="PDF"><i class="fa-solid fa-file-pdf"></i></a>
+          <a href="#" onclick="showBibtex('bibtexOTM')" title="BibTeX"><i class="fa-solid fa-quote-right"></i></a>
+          <a href="https://github.com/sofianeazogagh/ObliviousTM" title="GitHub"><i class="fa-brands fa-github"></i></a>
+        </div>
+      </div>
+      <p style="font-size: 0.9em">EDCC 2024 : <a href="https://edcc2024.esat.kuleuven.be"> The 19th
+          European Dependable Computing Conference</a> with V. Defour, and M-O. Killijian (distinguished paper award)
+      </p>
+    </div>
+
+    <!-- PROBONITE -->
+    <div class="publication-entry">
+      <div class="publication-header">
+        <h4 style="font-size: 1.1em">PROBONITE : Private
+          One-Branch-Only Non-Interactive
+          decision Tree Evaluation</h4>
+        <div class="paper-links">
+          <a href="https://dl.acm.org/doi/10.1145/3560827.3563377" title="PDF"><i class="fa-solid fa-file-pdf"></i></a>
+          <a href="#" onclick="showBibtex('bibtexPROBONITE')" title="BibTeX"><i class="fa-solid fa-quote-right"></i></a>
+          <a href="https://github.com/sofianeazogagh/PROBONITE" title="GitHub"><i class="fa-brands fa-github"></i></a>
+        </div>
+      </div>
+      <p style="font-size: 0.9em">WAHC 2022 : <a href="https://homomorphicencryption.org/workshops/wahc22/"> The 10th
+          Workshop on
           Encrypted Computing & Applied Homomorphic Cryptography</a>
         with V. Delfour, S. Gambs and M-O. Killijian</p>
-      <h3><a href="./elliptic-curve-m2.pdf">Research and implementation of pairing elliptic curves (in french)</a></h3>
-      <p>Master's thesis at Orange Lab, Cesson-Sévigné, France. Under the supervision of R. Clarisse.</p>
+
+      <!-- Master's Thesis -->
+      <div class="publication-entry">
+        <div class="publication-header">
+          <h4 style="font-size: 1.1em">Research and implementation of pairing elliptic
+            curves (in french)</h4>
+          <div class="paper-links">
+            <a href="./elliptic-curve-m2.pdf" title="PDF"><i class="fa-solid fa-file-pdf"></i></a>
+          </div>
+        </div>
+        <p>Master's thesis at Orange Lab, Cesson-Sévigné, France. Under the supervision of R. Clarisse.</p>
+      </div>
 
     </div>
 
   </main>
 
+  <!-- Modals -->
+  <div id="bibtexBlindSort" class="bibtex-modal">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5>BibTeX Citation</h5>
+        <span class="close">&times;</span>
+      </div>
+      <div class="modal-body">
+        <pre><code>
+        @misc{cryptoeprint:2024/1894,
+        author = {Sofiane Azogagh and Marc-Olivier Killijian and Félix Larose-Gervais},
+        title = {A non-comparison oblivious sort and its application to private k-{NN}},
+        howpublished = {Cryptology {ePrint} Archive, Paper 2024/1894},
+        year = {2024},
+        url = {https://eprint.iacr.org/2024/1894}
+        }
+      </code></pre>
+        <button class="copy-button" onclick="copyBibtex('bibtexBlindSort')">Copy to Clipboard</button>
+      </div>
+    </div>
+  </div>
 
+  <div id="bibtexCryptoGraph" class="bibtex-modal">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5>BibTeX Citation</h5>
+        <span class="close">&times;</span>
+      </div>
+      <div class="modal-body">
+        <pre><code>
+          @inproceedings{azogagh2024crypto,
+            title={Crypto'Graph: Leveraging Privacy-Preserving Distributed Link Prediction for Robust Graph Learning},
+            author={Azogagh, Sofiane and Birba, Zelma Aubin and Gambs, S{\'e}bastien and Killijian, Marc-Olivier},
+            booktitle={Proceedings of the Fourteenth ACM Conference on Data and Application Security and Privacy},
+            pages={199--210},
+            year={2024}
+          }
+      </code></pre>
+        <button class="copy-button" onclick="copyBibtex('bibtexCryptoGraph')">Copy to Clipboard</button>
+      </div>
+    </div>
+  </div>
+
+  <div id="bibtexOTM" class="bibtex-modal">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5>BibTeX Citation</h5>
+        <span class="close">&times;</span>
+      </div>
+      <div class="modal-body">
+        <pre><code>
+          @inproceedings{azogagh2024oblivious,
+            title={Oblivious Turing Machine},
+            author={Azogagh, Sofiane and Delfour, Victor and Killijian, Marc-Olivier},
+            booktitle={2024 19th European Dependable Computing Conference (EDCC)},
+            pages={17--24},
+            year={2024},
+            organization={IEEE}
+          }
+      </code></pre>
+        <button class="copy-button" onclick="copyBibtex('bibtexOTM')">Copy to Clipboard</button>
+      </div>
+    </div>
+  </div>
+
+  <div id="bibtexPROBONITE" class="bibtex-modal">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5>BibTeX Citation</h5>
+        <span class="close">&times;</span>
+      </div>
+      <div class="modal-body">
+        <pre><code>
+          @inproceedings{azogagh2022probonite,
+            title={Probonite: Private one-branch-only non-interactive decision tree evaluation},
+            author={Azogagh, Sofiane and Delfour, Victor and Gambs, S{\'e}bastien and Killijian, Marc-Olivier},
+            booktitle={Proceedings of the 10th Workshop on Encrypted Computing \& Applied Homomorphic Cryptography},
+            pages={23--33},
+            year={2022}
+          }
+      </code></pre>
+        <button class="copy-button" onclick="copyBibtex('bibtexPROBONITE')">Copy to Clipboard</button>
+      </div>
+    </div>
+  </div>
+
+  <div id="bibtexRevoLUT" class="bibtex-modal">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5>BibTeX Citation</h5>
+        <span class="close">&times;</span>
+      </div>
+      <div class="modal-body">
+        <pre><code>
+          @misc{cryptoeprint:2024/1935,
+            author = {Sofiane Azogagh and Zelma Aubin Birba and Marc-Olivier Killijian and Félix Larose-Gervais},
+            title = {{RevoLUT} : Rust Efficient Versatile Oblivious Look-Up-Tables},
+            howpublished = {Cryptology {ePrint} Archive, Paper 2024/1935},
+            year = {2024},
+            url = {https://eprint.iacr.org/2024/1935}
+          }
+      </code></pre>
+        <button class="copy-button" onclick="copyBibtex('bibtexRevoLUT')">Copy to Clipboard</button>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
+
+  @misc{revolut,
+  title = {{RevoLUT: Rust efficient versatile library for oblivious Look-Up Tables}},
+  year = {2024},
+  note = {\url{https://github.com/sofianeazogagh/revoLUT}}
+  }
+
+  <!-- End Modals -->
 
   <footer class="bg-light text-center text-lg-start">
     <!-- Copyright -->
@@ -97,6 +292,36 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"
     integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
     crossorigin="anonymous"></script>
+
+  <script>
+    function showBibtex(modalId) {
+      const modal = document.getElementById(modalId);
+      modal.style.display = "block";
+
+      const span = modal.getElementsByClassName("close")[0];
+      span.onclick = function () {
+        modal.style.display = "none";
+      }
+
+      window.onclick = function (event) {
+        if (event.target == modal) {
+          modal.style.display = "none";
+        }
+      }
+    }
+
+    function copyBibtex(modalId) {
+      const modal = document.getElementById(modalId);
+      const text = modal.querySelector('pre code').textContent;
+      navigator.clipboard.writeText(text).then(() => {
+        const button = modal.querySelector('.copy-button');
+        button.textContent = 'Copied!';
+        setTimeout(() => {
+          button.textContent = 'Copy to Clipboard';
+        }, 2000);
+      });
+    }
+  </script>
 </body>
 
 </html>
