--- a/Publications.html
+++ b/Publications.html
@@ -74,84 +74,85 @@
       </div>
 
       <!-- RevoLUT -->
-
-      <div class="publication-entry"></div>
-      <div class="publication-header">
-        <h4 style="font-size: 1.1em"> RevoLUT : Rust Efficient Versatile Oblivious Look-Up-Tables</h4>
-        <div class="paper-links">
-          <a href="https://eprint.iacr.org/2024/1935.pdf" title="PDF"><i class="fa-solid fa-file-pdf"></i></a>
-          <a href="#" onclick="showBibtex('bibtexRevoLUT')" title="BibTeX"><i class="fa-solid fa-quote-right"></i></a>
-          <a href="https://github.com/sofianeazogagh/revoLUT" title="GitHub"><i class="fa-brands fa-github"></i></a>
-        </div>
-      </div>
-      <p style="font-size: 0.9em">Under review with Z. A. Birba, M-O. Killijian and F. Larose-Gervais</p>
-    </div>
-
-
-
-    <!-- Crypto'Graph -->
-    <div class="publication-entry">
-      <div class="publication-header">
-        <h4 style="font-size: 1.1em">Crypto'Graph: Leveraging
-          Privacy-Preserving Distributed Link Prediction for Robust Graph Learning</h4>
-        <div class="paper-links">
-          <a href="https://arxiv.org/pdf/2309.10890v1.pdf" title="PDF"><i class="fa-solid fa-file-pdf"></i></a>
-          <a href="#" onclick="showBibtex('bibtexCryptoGraph')" title="BibTeX"><i
-              class="fa-solid fa-quote-right"></i></a>
-          <a href="https://github.com/birbaubin/distributed-link-prediction" title="GitHub"><i
-              class="fa-brands fa-github"></i></a>
-        </div>
-      </div>
-      <p style="font-size: 0.9em">CODASPY 2024 : <a href="https://codaspy2024.org/">The 14th ACM Conference on Data
-          and Application Security and Privacy</a>
-        with Z. A. Birba, S. Gambs and M-O. Killijian</p>
-    </div>
-
-    <!-- OTM -->
-    <div class="publication-entry">
-      <div class="publication-header">
-        <h4 style="font-size: 1.1em">Oblivious Turing Machine</h4>
-        <div class="paper-links">
-          <a href="https://eprint.iacr.org/2023/1643.pdf" title="PDF"><i class="fa-solid fa-file-pdf"></i></a>
-          <a href="#" onclick="showBibtex('bibtexOTM')" title="BibTeX"><i class="fa-solid fa-quote-right"></i></a>
-          <a href="https://github.com/sofianeazogagh/ObliviousTM" title="GitHub"><i class="fa-brands fa-github"></i></a>
-        </div>
-      </div>
-      <p style="font-size: 0.9em">EDCC 2024 : <a href="https://edcc2024.esat.kuleuven.be"> The 19th
-          European Dependable Computing Conference</a> with V. Defour, and M-O. Killijian (distinguished paper award)
-      </p>
-    </div>
-
-    <!-- PROBONITE -->
-    <div class="publication-entry">
-      <div class="publication-header">
-        <h4 style="font-size: 1.1em">PROBONITE : Private
-          One-Branch-Only Non-Interactive
-          decision Tree Evaluation</h4>
-        <div class="paper-links">
-          <a href="https://dl.acm.org/doi/10.1145/3560827.3563377" title="PDF"><i class="fa-solid fa-file-pdf"></i></a>
-          <a href="#" onclick="showBibtex('bibtexPROBONITE')" title="BibTeX"><i class="fa-solid fa-quote-right"></i></a>
-          <a href="https://github.com/sofianeazogagh/PROBONITE" title="GitHub"><i class="fa-brands fa-github"></i></a>
-        </div>
-      </div>
-      <p style="font-size: 0.9em">WAHC 2022 : <a href="https://homomorphicencryption.org/workshops/wahc22/"> The 10th
-          Workshop on
-          Encrypted Computing & Applied Homomorphic Cryptography</a>
-        with V. Delfour, S. Gambs and M-O. Killijian</p>
-
-      <!-- Master's Thesis -->
       <div class="publication-entry">
         <div class="publication-header">
-          <h4 style="font-size: 1.1em">Research and implementation of pairing elliptic
-            curves (in french)</h4>
+          <h4 style="font-size: 1.1em">RevoLUT : Rust Efficient Versatile Oblivious Look-Up-Tables</h4>
           <div class="paper-links">
-            <a href="./elliptic-curve-m2.pdf" title="PDF"><i class="fa-solid fa-file-pdf"></i></a>
+            <a href="https://eprint.iacr.org/2024/1935.pdf" title="PDF"><i class="fa-solid fa-file-pdf"></i></a>
+            <a href="#" onclick="showBibtex('bibtexRevoLUT')" title="BibTeX"><i class="fa-solid fa-quote-right"></i></a>
+            <a href="https://github.com/sofianeazogagh/revoLUT" title="GitHub"><i class="fa-brands fa-github"></i></a>
           </div>
         </div>
-        <p>Master's thesis at Orange Lab, Cesson-Sévigné, France. Under the supervision of R. Clarisse.</p>
+        <p style="font-size: 0.9em">Under review with Z. A. Birba, M-O. Killijian and F. Larose-Gervais</p>
       </div>
 
-    </div>
+
+
+      <!-- Crypto'Graph -->
+      <div class="publication-entry">
+        <div class="publication-header">
+          <h4 style="font-size: 1.1em">Crypto'Graph: Leveraging
+            Privacy-Preserving Distributed Link Prediction for Robust Graph Learning</h4>
+          <div class="paper-links">
+            <a href="https://arxiv.org/pdf/2309.10890v1.pdf" title="PDF"><i class="fa-solid fa-file-pdf"></i></a>
+            <a href="#" onclick="showBibtex('bibtexCryptoGraph')" title="BibTeX"><i
+                class="fa-solid fa-quote-right"></i></a>
+            <a href="https://github.com/birbaubin/distributed-link-prediction" title="GitHub"><i
+                class="fa-brands fa-github"></i></a>
+          </div>
+        </div>
+        <p style="font-size: 0.9em">CODASPY 2024 : <a href="https://codaspy2024.org/">The 14th ACM Conference on Data
+            and Application Security and Privacy</a>
+          with Z. A. Birba, S. Gambs and M-O. Killijian</p>
+      </div>
+
+      <!-- OTM -->
+      <div class="publication-entry">
+        <div class="publication-header">
+          <h4 style="font-size: 1.1em">Oblivious Turing Machine</h4>
+          <div class="paper-links">
+            <a href="https://eprint.iacr.org/2023/1643.pdf" title="PDF"><i class="fa-solid fa-file-pdf"></i></a>
+            <a href="#" onclick="showBibtex('bibtexOTM')" title="BibTeX"><i class="fa-solid fa-quote-right"></i></a>
+            <a href="https://github.com/sofianeazogagh/ObliviousTM" title="GitHub"><i
+                class="fa-brands fa-github"></i></a>
+          </div>
+        </div>
+        <p style="font-size: 0.9em">EDCC 2024 : <a href="https://edcc2024.esat.kuleuven.be"> The 19th
+            European Dependable Computing Conference</a> with V. Defour, and M-O. Killijian (distinguished paper award)
+        </p>
+      </div>
+
+      <!-- PROBONITE -->
+      <div class="publication-entry">
+        <div class="publication-header">
+          <h4 style="font-size: 1.1em">PROBONITE : Private
+            One-Branch-Only Non-Interactive
+            decision Tree Evaluation</h4>
+          <div class="paper-links">
+            <a href="https://dl.acm.org/doi/10.1145/3560827.3563377" title="PDF"><i
+                class="fa-solid fa-file-pdf"></i></a>
+            <a href="#" onclick="showBibtex('bibtexPROBONITE')" title="BibTeX"><i
+                class="fa-solid fa-quote-right"></i></a>
+            <a href="https://github.com/sofianeazogagh/PROBONITE" title="GitHub"><i class="fa-brands fa-github"></i></a>
+          </div>
+        </div>
+        <p style="font-size: 0.9em">WAHC 2022 : <a href="https://homomorphicencryption.org/workshops/wahc22/"> The 10th
+            Workshop on
+            Encrypted Computing & Applied Homomorphic Cryptography</a>
+          with V. Delfour, S. Gambs and M-O. Killijian</p>
+
+        <!-- Master's Thesis -->
+        <div class="publication-entry">
+          <div class="publication-header">
+            <h4 style="font-size: 1.1em">Research and implementation of pairing elliptic
+              curves (in french)</h4>
+            <div class="paper-links">
+              <a href="./elliptic-curve-m2.pdf" title="PDF"><i class="fa-solid fa-file-pdf"></i></a>
+            </div>
+          </div>
+          <p>Master's thesis at Orange Lab, Cesson-Sévigné, France. Under the supervision of R. Clarisse.</p>
+        </div>
+      </div>
 
   </main>
 
@@ -261,19 +262,6 @@
       </div>
     </div>
   </div>
-
-
-
-
-
-
-
-  @misc{revolut,
-  title = {{RevoLUT: Rust efficient versatile library for oblivious Look-Up Tables}},
-  year = {2024},
-  note = {\url{https://github.com/sofianeazogagh/revoLUT}}
-  }
-
   <!-- End Modals -->
 
   <footer class="bg-light text-center text-lg-start">
