--- a/Teaching.html
+++ b/Teaching.html
@@ -48,37 +48,51 @@
     <div class="side-bar-left">
       <img class="images_profil" src="pic_at_whac.jpg" alt="Image Profil">
       <nav class="side_bar_links">
-          <i class="fa-solid fa-location-dot"> </i> Montréal, CA<br>
-          <i class="fa-brands fa-linkedin"> </i> <a href="https://www.linkedin.com/in/sofiane-azogagh-5332651b8/"> Linkedin</a> <br>
-          <i class="fa-solid fa-envelope"> </i><a href="mailto:azogagh.sofiane@courrier.uqam.ca"> Email</a><br>
-          <i class="fa-brands fa-github"> </i> <a href="https://github.com/sofianeazogagh">Github</a> <br>
+        <i class="fa-solid fa-location-dot"> </i> Montréal, CA<br>
+        <i class="fa-brands fa-linkedin"> </i> <a href="https://www.linkedin.com/in/sofiane-azogagh-5332651b8/">
+          Linkedin</a> <br>
+        <i class="fa-solid fa-envelope"> </i><a href="mailto:azogagh.sofiane@courrier.uqam.ca"> Email</a><br>
+        <i class="fa-brands fa-github"> </i> <a href="https://github.com/sofianeazogagh">Github</a> <br>
       </nav>
     </div>
     <div class="main-content">
       <h1>Teaching</h1>
       <hr>
+      <h3>2023-2024 : Lecturer (Université du Québec à Montréal)</h3>
+      <ul>
+        <li> Undergraduate courses, Department of Computer Science</li>
+        <ul>
+          <li>Mathematics for computer science <a href="https://etudier.uqam.ca/cours?sigle=INF1132">(INF1132)</a></li>
+        </ul>
+      </ul>
       <h3>2022-2023 : Teaching Assistant (Université du Québec à Montréal)</h3>
       <ul>
         <li> Undergraduate courses, Department of Computer Science</li>
         <ul>
-          <li>Lab Sessions - Introduction to IT security <a href="https://etudier.uqam.ca/cours?sigle=INF1132">(INF4471)</a></li>
-          <li>Lab Sessions - Mathematics for computer science <a href="https://etudier.uqam.ca/cours?sigle=INF1132">(INF1132)</a></li>
-          <li>Marker - Mathematics for computer science <a href="https://etudier.uqam.ca/cours?sigle=INF1132">(INF1132)</a></li>
+          <li>Lab Sessions - Introduction to IT security <a
+              href="https://etudier.uqam.ca/cours?sigle=INF1132">(INF4471)</a></li>
+          <li>Lab Sessions - Mathematics for computer science <a
+              href="https://etudier.uqam.ca/cours?sigle=INF1132">(INF1132)</a></li>
+          <li>Marker - Mathematics for computer science <a
+              href="https://etudier.uqam.ca/cours?sigle=INF1132">(INF1132)</a></li>
         </ul>
         <li> Undergraduate courses, Department of Mathematics</li>
         <ul>
-          <li>Lab Sessions - Differential & Integral Calculus I <a href="https://etudier.uqam.ca/cours?sigle=MAT0341">(MAT0341)</a></li>
+          <li>Lab Sessions - Differential & Integral Calculus I <a
+              href="https://etudier.uqam.ca/cours?sigle=MAT0341">(MAT0341)</a></li>
         </ul>
       </ul>
       <h3>2021-2022 : Teaching Assistant (Université du Québec à Montréal)</h3>
       <ul>
         <li> Undergraduate courses, Department of Computer Science</li>
         <ul>
-          <li>Marker - Introduction to IT security <a href="https://etudier.uqam.ca/cours?sigle=INF4471">(INF4471)</a></li>
+          <li>Marker - Introduction to IT security <a href="https://etudier.uqam.ca/cours?sigle=INF4471">(INF4471)</a>
+          </li>
         </ul>
         <li> Graduate courses, Department of Computer Science</li>
         <ul>
-          <li>Lab Sessions - Security of IT systems <a href="https://etudier.uqam.ca/cours?sigle=INF8750">(INF8750)</a></li>
+          <li>Lab Sessions - Security of IT systems <a href="https://etudier.uqam.ca/cours?sigle=INF8750">(INF8750)</a>
+          </li>
         </ul>
       </ul>
 
@@ -98,7 +112,7 @@
       <span id="currentYear"></span> - Azogagh Sofiane
     </div>
   </footer>
-  
+
   <script>
     document.getElementById('currentYear').textContent = new Date().getFullYear();
   </script>
